<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".ConsumerActivity">    <FrameLayout        android:layout_width="match_parent"        android:layout_height="match_parent">        <WebView            android:id="@+id/main_web"            android:layout_width="match_parent"            android:layout_height="match_parent"></WebView>        <LinearLayout            android:id="@+id/warning"            android:visibility="invisible"            android:layout_width="match_parent"            android:layout_height="500dp"            android:layout_gravity="center"            android:layout_marginHorizontal="30dp"            android:background="@color/primary"            android:orientation="vertical">            <TextView                android:layout_width="match_parent"                android:layout_height="30dp"                android:background="@color/primary_darker"                android:gravity="center"                android:text="당신은 현재 음주 상태입니다"                android:textColor="@color/white"                android:textSize="20sp" />            <LinearLayout                android:layout_width="match_parent"                android:layout_height="match_parent"                android:orientation="vertical"                android:padding="24dp">                <TextView                    android:id="@+id/txtText"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="3dp"                    android:alpha="0.87"                    android:text="@string/drunken_danger"                    android:textColor="@color/white"                    android:textSize="14sp"                    android:textStyle="bold" />                <ImageView                    android:layout_width="138dp"                    android:layout_height="132dp"                    android:layout_gravity="center"                    android:padding="10dp"                    android:src="@drawable/photo" />                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:padding="5dp"                    android:text="현재 당신의 모습\n어떤지 아십니까?"                    android:textColor="@color/black"                    android:textStyle="bold"></TextView>                <Button                    android:id="@+id/camera"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:background="@drawable/custom_button"                    android:text="CAMERA"></Button>                <TextView                    android:id="@+id/address"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center" />                <Button                    android:id="@+id/addressbutton"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:text="ADDRESS" />            </LinearLayout>        </LinearLayout>    </FrameLayout>    <ListView        android:id="@+id/lvMessage"        android:layout_width="match_parent"        android:layout_height="0dip"        android:layout_weight="0.9"        android:visibility="invisible"        tools:visibility="invisible"></ListView>    <Button        android:id="@+id/buttonConnect"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:onClick="mOnClick"        android:text="@string/buttonConnect"        android:textSize="24sp"        android:textStyle="bold"        android:visibility="invisible"        tools:visibility="invisible" />    <Button        android:id="@+id/buttonDisconnect"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:onClick="mOnClick"        android:text="@string/buttonDisconnect"        android:textSize="24sp"        android:textStyle="bold"        android:visibility="invisible"        tools:visibility="invisible" />    <Button        android:id="@+id/buttonSend"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:onClick="mOnClick"        android:text="@string/buttonSend"        android:textSize="24sp"        android:textStyle="bold"        android:visibility="invisible"        tools:visibility="invisible" />    <Button        android:id="@+id/buttonSave"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:onClick="mOnClick"        android:text="@string/buttonSave"        android:textSize="24sp"        android:textStyle="bold" /></LinearLayout>